Bug 342085 - Window shadows disappear or broken after being unminimized.
Summary: Window shadows disappear or broken after being unminimized.
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: decorations (other bugs)
Version First Reported In: git master
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://git.reviewboard.kde.org/r/121...
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-21 18:48 UTC by Antonis G.
Modified: 2015-02-19 20:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
mgraesslin: ReviewRequest+


Attachments
Broken shadows (211.78 KB, image/png)
2014-12-21 18:48 UTC, Antonis G.
Details
no shadows (23.79 KB, image/png)
2014-12-21 18:49 UTC, Antonis G.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Antonis G. 2014-12-21 18:48:03 UTC
See screenshot.

Reproducible: Always

Steps to Reproduce:
1. Right click a task entry, select Minimize
2. Repeat 1.


Actual Results:  
The window shadows are broken untill I click and drag the window.
Comment 1 Antonis G. 2014-12-21 18:48:26 UTC
Created attachment 90082 [details]
Broken shadows
Comment 2 Antonis G. 2014-12-21 18:49:31 UTC
Created attachment 90083 [details]
no shadows
Comment 3 Martin Flöser 2015-01-05 13:18:24 UTC
I cannot reproduce. Can you please provide the output of:
qdbus org.kde.KWin /KWin supportInformation
Comment 4 Antonis G. 2015-01-05 14:01:18 UTC
Sure, here you go: https://paste.kde.org/pqruzkvcq
Note, I used the framework packages (5.5.0) from extra then I built kwin-git from aur, if it matters.
Comment 5 Martin Flöser 2015-01-05 14:38:45 UTC
ok, that looks all fine and breaks my idea that the minimize animation fixes it for me ;-)

No idea what's going on there.
Comment 6 Thomas Lübking 2015-01-05 14:56:14 UTC
Can you please elaborate on the screenshots?

Notably: Is the issue the absence of shadows (but in the lower right), or do the solid colors (notably the blue) have sth. to do w/ it?

Also: what happens if you disable blur & contrast effects? (run "kcmshell5 kwineffects" to configure)

Last: what if you run
kwriteconfig5 --file kwinrc --group Compositing --key GLStrictBinding  true

and restart "kwin_x11 --replace &"?
Comment 7 Antonis G. 2015-01-05 15:19:35 UTC
I used a plain color as wallpaper type so it is more evident that the shadows are broken. I followed all of your suggestions, nothing changed.
Comment 8 Antonis G. 2015-01-05 15:50:15 UTC
I found the cause: Switch Animation speed to instant.
Comment 9 Martin Flöser 2015-01-05 15:52:51 UTC
(In reply to Antonis G. from comment #8)
> I found the cause: Switch Animation speed to instant.

ah yes, that makes sense. With instant I assume that minimize animation did nothing and triggered a not updated case.
Comment 10 Antonis G. 2015-01-05 16:00:02 UTC
Yes, I switched animation speed to not instant and disabled minimize animation, still happening. You were right after all!
Comment 11 Martin Flöser 2015-01-07 09:36:45 UTC
just tested without the minimize effect and can reproduce.
Comment 12 Martin Flöser 2015-01-08 08:07:38 UTC
Git commit c69dec566c17c5cf5b324ebde41a0c8042b4acc1 by Martin Gräßlin.
Committed on 07/01/2015 at 09:53.
Pushed by graesslin into branch 'master'.

Use layerRepaint with visibleRect from Client::map

When map is called we need to repaint the complete area including
decoration shadows (e.g. might be called after unminimize). Therefore
we use a layer repaint with the visibleRect.
REVIEW: 121891

M  +1    -0    client.cpp

http://commits.kde.org/kwin/c69dec566c17c5cf5b324ebde41a0c8042b4acc1